Fix display specificity causing overlapping views

--- a/style.css
+++ b/style.css
@@ -599,10 +599,13 @@ header {
     max-width: 100vw;
     padding: 0;
     height: 100%;
-    display: flex;
     flex-direction: column;
     justify-content: flex-end;
     position: relative;
+}
+
+#storyView.active {
+    display: flex;
 }
 
 .slides-wrapper {
